# idevicerestore

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.ac
src/: Makefile.am  asr.c  common.c  common.h  dfu.c  dfu.h  fdr.c  fdr.h  idevicerestore.c  idevicerestore.h  img3.c  img4.c  ipsw.c  locking.h  normal.c  recovery.c  recovery.h  restore.c  restore.h  sha1.c.orig  sha1.h.orig  thread.c  thread.h  tss.c
